# HackatonAi

./: ADMIN_IMPLEMENTATION_SUMMARY.md  ADMIN_QUICKSTART.md  ADMIN_SETUP.md  ADMIN_SYSTEM.md  API_INTEGRATION.md  DOCUMENTATION.md  GPU_SETUP.md  Makefile  README.md  docker-compose.yml  mongo-init.js  package-lock.json  package.json  setup-admin.js  setup-admin.sh
ai/: .gitignore  Dockerfile  entrypoint.sh  init_ollama.sh  main.py  pyproject.toml  server.py  start_server.sh
ai/chroma_db/5e6e93ff-8031-44f6-8cde-46469ee25dc3/: index_metadata.pickle
ai/chroma_db/b0124279-d5cb-4db8-8e3f-6900e6629964/: index_metadata.pickle
ai/data/: 06 Réactions chimiques.md  200639_Manual_-_FRENCH_Proof (1).md  CAP unit doc.md  MANUEL OPERATOIRE ACP.md  Physico-Chimie du Procédé 1.md  eosrt3-eos1100d-bim2-c-en.md  manuel-hd-hat-has-ta-fr_1 (1).md
ai/data_raw/: MANUEL OPERATOIRE ACP.docx
ai/src/: main.py  server.py
ai/src/ai_interaction/: query_llm.py
ai/src/db_management/: convert_to_md.py  db_manager.py  doc_loader.py  doc_splitter.py  embedder.py
ai/tests/: test_questions.json  tests.py
docs/: ai_backend.md  project_setup.md  web_frontend.md
web/: .env  .env.example  .env.local.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
web/src/app/: ThemeProvider.jsx  globals.css  layout.js  page.js
web/src/app/chats/: ConversationsList.client.jsx  CreateChatButton.client.jsx  NotFoundActions.client.jsx  page.jsx
web/src/app/components/: AdminNavbar.jsx  AdminSidebar.jsx  AuthProvider.jsx  ConfirmModal.jsx  EmailForm.jsx  NotificationProvider.jsx  (+3 more)
(+44 files in other folders)
