[project]
name = "ocp-ai-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "docling>=2.63.0",
    "docx2txt>=0.9",
    "einops>=0.8.1",
    "fastapi>=0.122.0",
    "flagembedding>=1.3.5",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "nomic>=3.9.0",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pypdf>=6.4.0",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.1.2",
    "uvicorn[standard]>=0.38.0",
]
